--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -5,6 +5,6 @@ Flask-Cors==3.0.2
 flask-restplus==0.10.0
 Flask-Script==2.0.5
 Logentries==0.17
-pylint==1.6.5
+radon==1.4.2
 rollbar==0.13.11
 WTForms==2.1
